[tool.poetry]
name = "splink_comparison_viewer"
version = "0.1.1"
description = "Create an interactive webpage to visualise Splink record comparisons"
authors = ["Robin Linacre <robinlinacre@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"